--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 <body>
   <div class="wrapper">
-    <header>Choose an option to vote for
+    <header>Choose an option to vote for miss bhopal
     </header>
     <div class="poll-area">
       <input type="checkbox" name="poll" id="opt-1">
@@ -196,7 +196,7 @@
         <div class="row">
           <div class="column">
             <span class="circle"></span>
-            <span class="text">Ambassador
+            <span class="text">tanushrivast
             </span>
           </div>
           <span class="percent">40%</span>
@@ -207,7 +207,7 @@
         <div class="row">
           <div class="column">
             <span class="circle"></span>
-            <span class="text">Host
+            <span class="text">pragyamishra1601
             </span>
           </div>
           <span class="percent">25%</span>
@@ -218,7 +218,7 @@
         <div class="row">
           <div class="column">
             <span class="circle"></span>
-            <span class="text">Rage
+            <span class="text">shrishtiupadhyay_
             </span>
           </div>
           <span class="percent">15%</span>
@@ -230,7 +230,7 @@
           <div class="column">
             <span class="circle"></span>
             <span class="text">
-              Vogue
+              naincy_mishraa
             </span>
             </span>
           </div>
@@ -243,7 +243,7 @@
           <div class="column">
             <span class="circle"></span>
             <span class="text">
-              GUCCI
+              vishpandey_98
             </span>
             </span>
           </div>
